{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 52,
  "lineage": "72fefdf1-7ff1-3278-f174-27f0f9b36018",
  "resources": [
    {
      "module": "module.app_gateways",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "appgw1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/publicIPAddresses/pip-appgw",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.163.211",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-appgw",
            "resource_group_name": "hub-rg",
            "sku": "Standard",
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.app_gateways",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "appgw1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.4.0/24",
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AppGatewaySubnet",
            "name": "AppGatewaySubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-rg",
            "virtual_network_name": "hub-vnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.app_gateways",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "appgw1",
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw/backendAddressPools/appGatewayBackendPool",
                "ip_addresses": [
                  "172.16.0.5",
                  "172.16.0.6"
                ],
                "name": "appGatewayBackendPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw/backendHttpSettingsCollection/appGatewayBackendHttpSettings",
                "name": "appGatewayBackendHttpSettings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw/frontendIPConfigurations/appGatewayFrontendIP",
                "name": "appGatewayFrontendIP",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/publicIPAddresses/pip-appgw",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw/frontendPorts/frontendPort",
                "name": "frontendPort",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw/gatewayIPConfigurations/appGatewayIpConfig",
                "name": "appGatewayIpConfig",
                "subnet_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AppGatewaySubnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw/frontendIPConfigurations/appGatewayFrontendIP",
                "frontend_ip_configuration_name": "appGatewayFrontendIP",
                "frontend_port_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw/frontendPorts/frontendPort",
                "frontend_port_name": "frontendPort",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw/httpListeners/appGatewayHttpListener",
                "name": "appGatewayHttpListener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw",
            "identity": [],
            "location": "centralindia",
            "name": "genomic-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw/backendAddressPools/appGatewayBackendPool",
                "backend_address_pool_name": "appGatewayBackendPool",
                "backend_http_settings_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw/backendHttpSettingsCollection/appGatewayBackendHttpSettings",
                "backend_http_settings_name": "appGatewayBackendHttpSettings",
                "http_listener_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw/httpListeners/appGatewayHttpListener",
                "http_listener_name": "appGatewayHttpListener",
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/applicationGateways/genomic-appgw/requestRoutingRules/rule1",
                "name": "rule1",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "hub-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.app_gateways.data.azurerm_public_ip.pip",
            "module.app_gateways.data.azurerm_subnet.subnet",
            "module.pips.azurerm_public_ip.pip",
            "module.rg.azurerm_resource_group.name"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "firewall1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/publicIPAddresses/pip-firewall",
            "idle_timeout_in_minutes": 4,
            "ip_address": "135.235.154.243",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-firewall",
            "resource_group_name": "hub-rg",
            "sku": "Standard",
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "firewall1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.6.0/24",
            "address_prefixes": [
              "10.0.6.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-rg",
            "virtual_network_name": "hub-vnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nsgs",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-genomic-app",
            "location": "centralindia",
            "name": "nsg-genomic-app",
            "resource_group_name": "hub-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.name"
          ]
        }
      ]
    },
    {
      "module": "module.pips",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pip1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/publicIPAddresses/pip-appgw",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.163.211",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-appgw",
            "resource_group_name": "hub-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.name"
          ]
        },
        {
          "index_key": "pip6",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/publicIPAddresses/pip-vpn-gateway",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.247.162.38",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-vpn-gateway",
            "resource_group_name": "hub-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.name"
          ]
        },
        {
          "index_key": "pip7",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/publicIPAddresses/pip-firewall",
            "idle_timeout_in_minutes": 4,
            "ip_address": "135.235.154.243",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-firewall",
            "resource_group_name": "hub-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.name"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.7.0/24",
            "address_prefixes": [
              "10.0.7.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/jumpserver-subnet",
            "name": "jumpserver-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-rg",
            "virtual_network_name": "hub-vnet"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.1.0/24",
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/spoketodo-rg/providers/Microsoft.Network/virtualNetworks/spoketodo-vnet/subnets/applicationtodo-subnet",
            "name": "applicationtodo-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spoketodo-rg",
            "virtual_network_name": "spoketodo-vnet"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "vm3",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/spokeincedo-rg/providers/Microsoft.Network/virtualNetworks/spokeincedo-vnet/subnets/applicationincedo-subnet",
            "name": "applicationincedo-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spokeincedo-rg",
            "virtual_network_name": "spokeincedo-vnet"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "vm4",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "30.0.1.0/24",
            "address_prefixes": [
              "30.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/onprem-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/applicationonprem-subnet",
            "name": "applicationonprem-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "onprem-rg",
            "virtual_network_name": "onprem-vnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/networkInterfaces/nic-jumpvm",
            "internal_domain_name_suffix": "ppbleep0s1iuvitizabuyylhlb.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.7.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/jumpserver-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "7C-1E-52-05-AA-8D",
            "name": "nic-jumpvm",
            "private_ip_address": "10.0.7.4",
            "private_ip_addresses": [
              "10.0.7.4"
            ],
            "resource_group_name": "hub-rg",
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            },
            "virtual_machine_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Compute/virtualMachines/jumpserver_vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.name",
            "module.vms.data.azurerm_subnet.subnet",
            "module.vnetsubnets.azurerm_virtual_network.vnetsubnet"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/spoketodo-rg/providers/Microsoft.Network/networkInterfaces/nic-todovm",
            "internal_domain_name_suffix": "1yjm5nbnf0oe5lmyjcterl3c4g.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig2",
                "primary": true,
                "private_ip_address": "172.16.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/spoketodo-rg/providers/Microsoft.Network/virtualNetworks/spoketodo-vnet/subnets/applicationtodo-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-0D-3A-1D-71-98",
            "name": "nic-todovm",
            "private_ip_address": "172.16.1.4",
            "private_ip_addresses": [
              "172.16.1.4"
            ],
            "resource_group_name": "spoketodo-rg",
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            },
            "virtual_machine_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/spoketodo-rg/providers/Microsoft.Compute/virtualMachines/todoapp_vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.name",
            "module.vms.data.azurerm_subnet.subnet",
            "module.vnetsubnets.azurerm_virtual_network.vnetsubnet"
          ]
        },
        {
          "index_key": "vm3",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/spokeincedo-rg/providers/Microsoft.Network/networkInterfaces/nic-incedo-vm",
            "internal_domain_name_suffix": "ob0u0htpybxefdpykmdnc41bsc.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig3",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/spokeincedo-rg/providers/Microsoft.Network/virtualNetworks/spokeincedo-vnet/subnets/applicationincedo-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "mac_address": "00-0D-3A-33-0A-F5",
            "name": "nic-incedo-vm",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "spokeincedo-rg",
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            },
            "virtual_machine_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/spokeincedo-rg/providers/Microsoft.Compute/virtualMachines/incedo-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.name",
            "module.vms.data.azurerm_subnet.subnet",
            "module.vnetsubnets.azurerm_virtual_network.vnetsubnet"
          ]
        },
        {
          "index_key": "vm4",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/onprem-rg/providers/Microsoft.Network/networkInterfaces/nic-onprem-vm",
            "internal_domain_name_suffix": "vf0cmoyaiuqetl03acxu4bkqrd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig4",
                "primary": true,
                "private_ip_address": "30.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/onprem-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/applicationonprem-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-93-25-DD",
            "name": "nic-onprem-vm",
            "private_ip_address": "30.0.1.4",
            "private_ip_addresses": [
              "30.0.1.4"
            ],
            "resource_group_name": "onprem-rg",
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            },
            "virtual_machine_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/onprem-rg/providers/Microsoft.Compute/virtualMachines/onprem-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.name",
            "module.vms.data.azurerm_subnet.subnet",
            "module.vnetsubnets.azurerm_virtual_network.vnetsubnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnetsubnets",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnetsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vnet1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "11b2c27b-96fa-4ad1-a268-c8034c616759",
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "location": "centralindia",
            "name": "hub-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "hub-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.4.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AppGatewaySubnet",
                "name": "AppGatewaySubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.5.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.6.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.7.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/jumpserver-subnet",
                "name": "jumpserver-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.name"
          ]
        },
        {
          "index_key": "vnet2",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b4cf12de-2e2d-4f9c-ad98-48a648afa2f6",
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/spoketodo-rg/providers/Microsoft.Network/virtualNetworks/spoketodo-vnet",
            "location": "eastus",
            "name": "spoketodo-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "spoketodo-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "172.16.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/spoketodo-rg/providers/Microsoft.Network/virtualNetworks/spoketodo-vnet/subnets/applicationtodo-subnet",
                "name": "applicationtodo-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.name"
          ]
        },
        {
          "index_key": "vnet3",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1e4d7570-c06f-426e-8df8-5306d17b6192",
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/spokeincedo-rg/providers/Microsoft.Network/virtualNetworks/spokeincedo-vnet",
            "location": "westus",
            "name": "spokeincedo-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "spokeincedo-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "192.168.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/spokeincedo-rg/providers/Microsoft.Network/virtualNetworks/spokeincedo-vnet/subnets/applicationincedo-subnet",
                "name": "applicationincedo-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.name"
          ]
        },
        {
          "index_key": "vnet4",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "30.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3b2674a9-4500-4920-af5d-00af4f05508b",
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/onprem-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet",
            "location": "westeurope",
            "name": "onprem-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "onprem-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "30.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/onprem-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/applicationonprem-subnet",
                "name": "applicationonprem-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg.azurerm_resource_group.name"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_gateway",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vpn1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/publicIPAddresses/pip-vpn-gateway",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.247.162.38",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-vpn-gateway",
            "resource_group_name": "hub-rg",
            "sku": "Standard",
            "tags": {
              "Environment": "dev",
              "Owner": "DevTeam",
              "Project": "MyProject"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpn_gateway",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vpn1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.5.0/24",
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-rg",
            "virtual_network_name": "hub-vnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpn_gateway",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vpn_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vpn1",
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.0.5.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "4.247.162.38"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/publicIPAddresses/pip-vpn-gateway",
                "subnet_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "centralindia",
            "name": "hub-vpn-gateway",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "hub-rg",
            "sku": "VpnGw1",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.pips.azurerm_public_ip.pip",
            "module.rg.azurerm_resource_group.name",
            "module.vnetsubnets.azurerm_virtual_network.vnetsubnet",
            "module.vpn_gateway.data.azurerm_public_ip.pip",
            "module.vpn_gateway.data.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_gateway",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "onpremise",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vpn1",
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/connections/vpn-connection",
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/localNetworkGateways/onpremise",
            "location": "centralindia",
            "name": "vpn-connection",
            "private_link_fast_path_enabled": false,
            "resource_group_name": "hub-rg",
            "routing_weight": 0,
            "shared_key": "Azure@123",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/3be29ba2-b31c-4fbd-a7bb-c51bf50ef740/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "authorization_key"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "shared_key"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.pips.azurerm_public_ip.pip",
            "module.rg.azurerm_resource_group.name",
            "module.vnetsubnets.azurerm_virtual_network.vnetsubnet",
            "module.vpn_gateway.azurerm_local_network_gateway.onpremise",
            "module.vpn_gateway.azurerm_virtual_network_gateway.vpn_gw",
            "module.vpn_gateway.data.azurerm_public_ip.pip",
            "module.vpn_gateway.data.azurerm_subnet.subnet"
          ]
        }
      ]
    }
  ]
}